[project]
name = "finsense-rl"
version = "1.0.0"
description = "A goal-driven financial decision-making RL environment simulating Indian household budgeting."
authors = [
    { name = "TEAM PIXEL-SYNC" }
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.1",
    "openai>=1.30.1",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
