[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "finsense-rl"
version = "0.1.0"
description = "Goal-driven financial decision-making RL environment for Indian household budgeting"
authors = [
    { name = "TEAM PIXEL-SYNC" }
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "httpx>=0.28.1",
    "openenv-core==0.2.3",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["finsense*", "server*"]